syntax = "proto3";

option csharp_namespace = "UserMicroservice";

package greet;

service User {
    rpc CreateUser (CreateRequest) returns (CreateReply);
}

message CreateRequest {
    string login = 1;
    string password = 2;
    string email = 3;
}

message CreateReply {
    string message = 1;
}